--- a/avansops/avansops.csproj
+++ b/avansops/avansops.csproj
@@ -5,7 +5,7 @@
 
         <IsPackable>false</IsPackable>
 
-        <RootNamespace>AvansOps1</RootNamespace>
+        <RootNamespace>AvansOps</RootNamespace>
     </PropertyGroup>
 
     <ItemGroup>
